src/main/java/com/example/githubrepos/api/error/dto/ApiServiceExceptionResponseDTO.java
package com.example.githubrepos.api.error.dto;

import org.springframework.http.HttpStatus;

public record ApiServiceExceptionResponseDTO(HttpStatus status, String message) {
}
